tests/snapshots/yaml_suite_snapshots__yaml_first5_236B_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- fail: true
  from: "@perlpunk"
  name: Invalid value after mapping
  tags: error mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :bar\n"
  yaml: "foo:\n  bar\ninvalid\n"
