tests/snapshots/yaml_suite_snapshots__yaml_first5_2AUY_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- dump: "- !!str a\n- b\n- !!int 42\n- d\n"
  from: NimYAML tests
  json: "[\n  \"a\",\n  \"b\",\n  42,\n  \"d\"\n]\n"
  name: Tags in Block Sequence
  tags: tag sequence
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL <tag:yaml.org,2002:str> :a\n   =VAL :b\n   =VAL <tag:yaml.org,2002:int> :42\n   =VAL :d\n  -SEQ\n -DOC\n-STR\n"
  yaml: " - !!str a\n - b\n - !!int 42\n - d\n"
