tests/snapshots/yaml_suite_snapshots__yaml_suite_236B_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid value after mapping
  from: "@perlpunk"
  tags: error mapping
  fail: true
  yaml: "foo:\n  bar\ninvalid\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL :bar\n"
